Closed Bug 898232 Opened 12 years ago Closed 12 years ago

nsXULPrototypeCache.cpp:208:19: warning: unused variable 'existingScript' [-Wunused-variable]

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Bug 896506's patch left us with an unused variable in nsXULPrototypeCache::PutScript(), triggering a build warning: { content/xul/document/src/nsXULPrototypeCache.cpp: In member function 'nsresult nsXULPrototypeCache::PutScript(nsIURI*, JS::Handle<JSScript*>)': content/xul/document/src/nsXULPrototypeCache.cpp:208:19: warning: unused variable 'existingScript' [-Wunused-variable] if (JSScript* existingScript = mScriptTable.Get(aURI)) { } Looks like we can just drop "JSScript* existingScript = "
Attached patch fixSplinter Review
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #781394 - Flags: review?(bugs)
Attachment #781394 - Flags: review?(bugs) → review?(jcoppeard)
Blocks: 898489
Comment on attachment 781394 [details] [diff] [review] fix Review of attachment 781394 [details] [diff] [review]: ----------------------------------------------------------------- Sorry about the warning! The fix looks good.
Attachment #781394 - Flags: review?(jcoppeard) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: