Bug 898232: Remove unused variable 'existingScript' from nsXULPrototypeCache::GetScript(). r=jonco